# embed-forge

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  Makefile  README.md
.github/workflows/: ci.yml
app/: CMakeLists.txt  app_led_blink.c  app_led_blink.h  app_main.c
board/nucleo_f411re/: CMakeLists.txt  STM32F411RETx_FLASH.ld  board_config.h  board_init.c  startup_stm32f411xe.s  stm32f4xx_hal_conf.h  stm32f4xx_it.c
cmake/: third_party.cmake  toolchain-arm-none-eabi.cmake  toolchain-host.cmake
docs/: architecture.md  demos.md
driver/: CMakeLists.txt  drv_button.c  drv_button.h  drv_led.c  drv_led.h  drv_uart_console.c  drv_uart_console.h
driver/device/: CMakeLists.txt  ef_device.c  ef_device.h  ef_init.c  ef_init.h
hal/: CMakeLists.txt
hal/include/: hal_gpio.h  hal_uart.h
hal/stm32f4xx/: hal_gpio_stm32f4.c  hal_uart_stm32f4.c
lib/ef_common/: CMakeLists.txt  ef_common.c
lib/ef_common/include/: ef_common.h
lib/ringbuffer/: CMakeLists.txt  ef_ringbuffer.c
lib/ringbuffer/include/: ef_ringbuffer.h
osal/bare/: osal_bare.c
osal/freertos/: osal_freertos.c
osal/freertos/config/: FreeRTOSConfig.h
osal/host/: osal_host.c
osal/include/: osal.h
service/: CMakeLists.txt  Kconfig.md
service/cli/: CMakeLists.txt  ef_cli.c
service/cli/include/: ef_cli.h
service/config/: CMakeLists.txt  ef_config.c
service/config/include/: ef_config.h
service/event_bus/: CMakeLists.txt  ef_event_bus.c
service/event_bus/include/: ef_event_bus.h
service/log/: CMakeLists.txt  ef_log.c
service/log/include/: ef_log.h
test/: CMakeLists.txt
test/host/: demo_cli_repl.c  test_app_led_blink.c  test_cli.c  test_config.c  test_ef_device.c  test_event_bus.c  test_log.c  test_ringbuffer.c
test/mocks/: drv_led_mock.c  drv_led_mock.h
tools/: flash.sh  new_driver.sh  new_service.sh
